--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,10 @@ requires-python = ">=3.13"
 dependencies = [
     "jupyter>=1.1.1",
     "pandas>=2.3.3",
+    "pytest>=8.4.2",
     "ruff>=0.14.0",
     "scrapy>=2.13.3",
 ]
+
+[ruff]
+line-length = 80
