--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "jupyter>=1.1.1",
+    "matplotlib>=3.10.7",
     "pandas>=2.3.3",
     "pytest>=8.4.2",
     "ruff>=0.14.0",
