--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,9 @@ dependencies = [
     "jupyter>=1.1.1",
     "matplotlib>=3.10.7",
     "pandas>=2.3.3",
+    "plotly>=6.3.1",
     "pytest>=8.4.2",
+    "requests>=2.32.5",
     "ruff>=0.14.0",
     "scrapy>=2.13.3",
 ]
