--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,16 +4,27 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
-dependencies = [
+dependencies = []
+
+[project.optional-dependencies]
+dataanalysis = [
     "jupyter>=1.1.1",
     "matplotlib>=3.10.7",
     "pandas>=2.3.3",
-    "plotly>=6.3.1",
-    "pytest>=8.4.2",
+    "plotly>=6.5.0",
+    "pytest>=9.0.1",
     "requests>=2.32.5",
-    "ruff>=0.14.0",
-    "scrapy>=2.13.3",
+    "ruff>=0.14.5",
+]
+scraping = [
+    "scrapy>=2.13.4",
 ]
 
 [ruff]
 line-length = 80
+
+[dependency-groups]
+dev = [
+    "pytest>=9.0.1",
+    "ruff>=0.14.5",
+]
