chore: update debug config for vscode.
If debug param set, no connection with AWS required.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -21,7 +21,9 @@
                 "runspider",
                 "${file}",
                 "-a",
-                "since=05112025"
+                "since=auto",
+                "-a",
+                "debug=True"
             ],
             "console": "integratedTerminal"
         }
