feat: edit dockerfile to work in auto mode
tested only in local, so ensured to work with local AWS creds, be careful with files permissions as it's not always obvious

--- a/web_scraping/Dockerfile
+++ b/web_scraping/Dockerfile
@@ -41,4 +41,4 @@ USER nonroot
 WORKDIR /app
 
 # Run scrapy crawl by default
-CMD ["scrapy", "crawl", "aruodas", "-a", "since=20112025", "-o", "ads.jsonl"]
+CMD ["scrapy", "crawl", "aruodas", "-a", "since=auto"]
