feat: passing log level to crawl job
Log level is calculated based on used env: debug for dev, info for prod. This required to create a run script

--- a/web_scraping/Dockerfile
+++ b/web_scraping/Dockerfile
@@ -41,4 +41,4 @@ USER nonroot
 WORKDIR /app
 
 # Run scrapy crawl by default
-CMD ["scrapy", "crawl", "aruodas", "-a", "since=auto"]
+CMD ["/app/web_scraping/run_auto.sh"]
