--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,11 +8,13 @@ dependencies = []
 
 [project.optional-dependencies]
 dataanalysis = [
+    "boto3>=1.41.2",
     "jupyter>=1.1.1",
     "matplotlib>=3.10.7",
     "pandas>=2.3.3",
     "plotly>=6.5.0",
     "pytest>=9.0.1",
+    "python-dotenv>=1.2.1",
     "requests>=2.32.5",
     "ruff>=0.14.5",
 ]
